[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://Pause.gd" type="Script" id=2]
[ext_resource path="res://ui/ScoreLabel.gd" type="Script" id=3]
[ext_resource path="res://ui/FPSLabel.gd" type="Script" id=4]

[node name="UserInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 15.0
margin_right = 121.0
margin_bottom = 46.0
text = "Score: 0"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -47.0
margin_right = 88.0
text = "FPS: 0"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )

[node name="Label" type="Label" parent="Retry"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -15.5
margin_bottom = 15.5
text = "Press enter to retry"
align = 1

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -199.5
margin_right = 144.0
margin_bottom = 199.5
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Pause/VBoxContainer"]
margin_right = 288.0
margin_bottom = 37.0
text = "Resume"

[node name="ToggleFullscreenButton" type="Button" parent="Pause/VBoxContainer"]
margin_top = 47.0
margin_right = 288.0
margin_bottom = 84.0
text = "Toggle Fullscreen"

[node name="SensitivityLabel" type="Label" parent="Pause/VBoxContainer"]
margin_top = 94.0
margin_right = 288.0
margin_bottom = 125.0
text = "Mouse Sensitivity: "

[node name="SensitivitySlider" type="HSlider" parent="Pause/VBoxContainer"]
margin_top = 135.0
margin_right = 288.0
margin_bottom = 151.0
min_value = 0.05
max_value = 1.0
step = 0.05
value = 0.1

[node name="DrawDistanceLabel" type="Label" parent="Pause/VBoxContainer"]
margin_top = 161.0
margin_right = 288.0
margin_bottom = 192.0
text = "Draw Distance: "

[node name="DrawDistanceSlider" type="HSlider" parent="Pause/VBoxContainer"]
margin_top = 202.0
margin_right = 288.0
margin_bottom = 218.0
min_value = 100.0
max_value = 500.0
value = 100.0

[node name="MusicVolumeLabel" type="Label" parent="Pause/VBoxContainer"]
margin_top = 228.0
margin_right = 288.0
margin_bottom = 259.0
text = "Music Volume: "

[node name="MusicVolumeSlider" type="HSlider" parent="Pause/VBoxContainer"]
margin_top = 269.0
margin_right = 288.0
margin_bottom = 285.0
value = 100.0

[node name="SoundVolumeLabel" type="Label" parent="Pause/VBoxContainer"]
margin_top = 295.0
margin_right = 288.0
margin_bottom = 326.0
text = "Sound Volume: "

[node name="SoundVolumeSlider" type="HSlider" parent="Pause/VBoxContainer"]
margin_top = 336.0
margin_right = 288.0
margin_bottom = 352.0
value = 100.0

[node name="ExitButton" type="Button" parent="Pause/VBoxContainer"]
margin_top = 362.0
margin_right = 288.0
margin_bottom = 399.0
text = "Exit"

[connection signal="pressed" from="Pause/VBoxContainer/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/ToggleFullscreenButton" to="Pause" method="_on_ToggleFullscreenButton_pressed"]
[connection signal="value_changed" from="Pause/VBoxContainer/SensitivitySlider" to="Pause" method="_on_SensitivitySlider_value_changed"]
[connection signal="value_changed" from="Pause/VBoxContainer/DrawDistanceSlider" to="Pause" method="_on_DrawDistanceSlider_value_changed"]
[connection signal="value_changed" from="Pause/VBoxContainer/MusicVolumeSlider" to="Pause" method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="Pause/VBoxContainer/SoundVolumeSlider" to="Pause" method="_on_SoundVolumeSlider_value_changed"]
[connection signal="pressed" from="Pause/VBoxContainer/ExitButton" to="Pause" method="_on_ExitButton_pressed"]
